tests/failures/adding_incompatible_variables.stderr
error[E0277]: the trait bound `f64: From<Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>>` is not satisfied
 --> $DIR/adding_incompatible_variables.rs:8:21
  |
8 |     let _result = a + b;
  |                     ^ the trait `From<Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>>` is not implemented for `f64`
  |
  = help: the following implementations were found:
            <f64 as From<f32>>
            <f64 as From<i16>>
            <f64 as From<i32>>
            <f64 as From<i8>>
          and 3 others
  = note: required because of the requirements on the impl of `Into<f64>` for `Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>`
  = note: required because of the requirements on the impl of `From<Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>>` for `Expression<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>`
  = note: 1 redundant requirements hidden
  = note: required because of the requirements on the impl of `Into<Expression<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>>` for `Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>`
  = note: required because of the requirements on the impl of `Add<Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>>` for `Variable<[closure@$DIR/src/variables_macro.rs:6:85: 6:89]>`
